deployment/file_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-server
spec:
  replicas: 5
  selector:
    matchLabels:
      name: file-server
  template:
    metadata:
      labels:
        name: file-server
    spec:
      containers:
        - name: application
          image: antandtim/file_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
