deployment/naming_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naming-server
spec:
  replicas: 1
  selector:
    matchLabels:
      name: naming-server
  template:
    metadata:
      labels:
        name: naming-server
    spec:
      containers:
        - name: application
          image: antandtim/naming_server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
