deployment/redis_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: redisdb
  template:
    metadata:
      labels:
        name: redisdb
    spec:
      containers:
        - image: redis
          name: redisdb
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis-data
      restartPolicy: Always
      volumes:
        - name: redis-data
