deployment/naming_service.yml
apiVersion: v1
kind: Service
metadata:
  name: naming-server-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    name: naming-server
