deployment/redis_service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    name: redisdb
